rename file to noob and remove some config variables causing compile errors

--- a/wpa_supplicant-2.6/wpa_supplicant/.config
+++ b/wpa_supplicant-2.6/wpa_supplicant/.config
@@ -68,7 +68,7 @@ CONFIG_LIBNL32=y
 # CONFIG_USE_NDISUIO=y
 
 # Driver interface for wired Ethernet drivers
-CONFIG_DRIVER_WIRED=y
+#CONFIG_DRIVER_WIRED=y
 
 # Driver interface for the Broadcom RoboSwitch family
 #CONFIG_DRIVER_ROBOSWITCH=y
@@ -100,7 +100,7 @@ CONFIG_IEEE8021X_EAPOL=y
 #CONFIG_EAP_TTLS=y
 
 #EAP-NOOB
-CONFIG_EAP_OOB=Y
+CONFIG_EAP_NOOB=Y
 
 # EAP-FAST
 # Note: If OpenSSL is used as the TLS library, OpenSSL 1.0 or newer is needed
@@ -109,10 +109,10 @@ CONFIG_EAP_OOB=Y
 #CONFIG_EAP_FAST=y
 
 # EAP-GTC
-CONFIG_EAP_GTC=y
+#CONFIG_EAP_GTC=y
 
 # EAP-OTP
-CONFIG_EAP_OTP=y
+#CONFIG_EAP_OTP=y
 
 # EAP-SIM (enable CONFIG_PCSC, if EAP-SIM is used)
 #CONFIG_EAP_SIM=y
@@ -127,7 +127,7 @@ CONFIG_EAP_OTP=y
 #CONFIG_EAP_PAX=y
 
 # LEAP
-CONFIG_EAP_LEAP=y
+#CONFIG_EAP_LEAP=y
 
 # EAP-AKA (enable CONFIG_PCSC, if EAP-AKA is used)
 #CONFIG_EAP_AKA=y
@@ -172,7 +172,7 @@ CONFIG_PKCS12=y
 
 # Smartcard support (i.e., private key on a smartcard), e.g., with openssl
 # engine.
-CONFIG_SMARTCARD=y
+#CONFIG_SMARTCARD=y
 
 # PC/SC interface for smartcards (USIM, GSM SIM)
 # Enable this if EAP-SIM or EAP-AKA is included
