small changes and model

--- a/hostapd-2.6/hostapd/.config
+++ b/hostapd-2.6/hostapd/.config
@@ -45,7 +45,7 @@ CONFIG_DRIVER_WIRED=y
 #CONFIG_DRIVER_NONE=y
 
 # IEEE 802.11F/IAPP
-CONFIG_IAPP=y
+#CONFIG_IAPP=y
 
 # WPA2/IEEE 802.11i RSN pre-authentication
 CONFIG_RSN_PREAUTH=y
@@ -60,28 +60,28 @@ CONFIG_IEEE80211W=y
 CONFIG_EAP=y
 
 # EAP Re-authentication Protocol (ERP) in integrated EAP server
-CONFIG_ERP=y
+#CONFIG_ERP=y
 
 # EAP-MD5 for the integrated EAP server
-CONFIG_EAP_MD5=y
+#CONFIG_EAP_MD5=y
 
 # EAP-TLS for the integrated EAP server
-CONFIG_EAP_TLS=y
+#CONFIG_EAP_TLS=y
 
 # EAP-MSCHAPv2 for the integrated EAP server
-CONFIG_EAP_MSCHAPV2=y
+#CONFIG_EAP_MSCHAPV2=y
 
 # EAP-PEAP for the integrated EAP server
-CONFIG_EAP_PEAP=y
+#CONFIG_EAP_PEAP=y
 
 # EAP-GTC for the integrated EAP server
-CONFIG_EAP_GTC=y
+#CONFIG_EAP_GTC=y
 
 # EAP-TTLS for the integrated EAP server
 #CONFIG_EAP_TTLS=y
 
 # EAP-OOB for the integrated EAP server
-CONFIG_EAP_OOB=y
+CONFIG_EAP_NOOB=y
 
 # EAP-SIM for the integrated EAP server
 #CONFIG_EAP_SIM=y
