fix some supplicant files

--- a/wpa_supplicant-2.6/wpa_supplicant/.config
+++ b/wpa_supplicant-2.6/wpa_supplicant/.config
@@ -100,7 +100,7 @@ CONFIG_IEEE8021X_EAPOL=y
 #CONFIG_EAP_TTLS=y
 
 #EAP-NOOB
-CONFIG_EAP_NOOB=Y
+CONFIG_EAP_NOOB=y
 
 # EAP-FAST
 # Note: If OpenSSL is used as the TLS library, OpenSSL 1.0 or newer is needed
