--- a/hostapd-2.6/hostapd/hostapd.conf
+++ b/hostapd-2.6/hostapd/hostapd.conf
@@ -1,9 +1,9 @@
-##### hostapd configuration file ##############################################
+#### hostapd configuration file ##############################################
 # Empty lines and lines starting with # are ignored
 
 # AP netdevice name (without 'ap' postfix, i.e., wlan0 uses wlan0ap for
 # management frames with the Host AP driver); wlan0 with many nl80211 drivers
-interface=eth0
+interface=ens3
 driver=wired
 # In case of atheros and nl80211 driver interfaces, an additional
 # configuration parameter, bridge, may be used to notify hostapd if the
@@ -950,9 +950,9 @@ own_ip_addr=127.0.0.1
 #radius_client_addr=127.0.0.1
 
 # RADIUS authentication server
-#auth_server_addr=127.0.0.1
+#auth_server_addr=193.166.25.85
 #auth_server_port=1812
-#auth_server_shared_secret=secret
+#auth_server_shared_secret=test1234
 
 # RADIUS accounting server
 #acct_server_addr=127.0.0.1
