--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,28 +2,28 @@
   "name": "node-authentication",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.3",
-    "ejs": "^2.5.9",
-    "sqlite3": "~3.1.4",
-    "body-parser": "~1.0.0",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6",
-    "passport-facebook": "~1.0.2",
-    "passport-twitter": "~1.0.2",
-    "passport-google-oauth": "~0.1.5",
-    "connect-flash": "~0.1.1",
-    "bcrypt-nodejs": "latest",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0",
-    "express-session": "~1.0.0",
     "base64url": "~2.0.0",
-    "python-shell": "~0.4.0",
-    "multer": "1.3.0",
-    "line-reader": "*",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "^1.0.2",
+    "connect-flash": "~0.1.1",
+    "cookie-parser": "~1.0.0",
     "csv-parse": "*",
-    "ws": "~1.1.1",
-    "nodejs-websocket": "~1.7.1"
+    "ejs": "^2.5.9",
+    "express": "^4.13.3",
+    "express-session": "~1.0.0",
+    "line-reader": "*",
+    "method-override": "~1.0.0",
+    "morgan": "~1.0.0",
+    "multer": "1.3.0",
+    "nodejs-websocket": "~1.7.1",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2",
+    "python-shell": "~0.4.0",
+    "sqlite3": "~3.1.4",
+    "ws": "~1.1.1"
   },
   "scripts": {
     "start": "node server.js"
